<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.qcri.aidr.persister</groupId>
	<artifactId>aidr-persister</artifactId>
	<name>AIDR Persister</name>
	<version>1.0</version>
	<packaging>war</packaging>
	<description>Persists the items that have been collected and/or tagged into files</description>
	<url>http://aidr.qcri.org/</url>

	<properties>
		<resource.dir>${basedir}/src/main/resources</resource.dir>
		<spring.version>4.2.1.RELEASE</spring.version>
		<org.springframework.data.version>1.9.0.RELEASE</org.springframework.data.version>
		<org.hibernate.hibernate-validator.version>5.1.0.CR1</org.hibernate.hibernate-validator.version>
		<org.hibernate.version>4.3.11.Final</org.hibernate.version>
		<commons-dbcp.version>1.2.2</commons-dbcp.version>
	</properties>

	<dependencies>
	
		<!-- Spring dependencies -->
		
		<!--  	<dependency>
	    		<groupId>org.springframework</groupId>
	    		<artifactId>org.springframework.web</artifactId>
	    		<version>3.2.0.RELEASE</version>
			</dependency> -->
			
			<dependency>
			    <groupId>org.springframework</groupId>
			    <artifactId>spring-aspects</artifactId>
			    <version>${spring.version}</version>
			</dependency>

	  		<dependency>
				  <groupId>org.springframework</groupId>
				  <artifactId>spring-web</artifactId>
				  <version>${spring.version}</version>
			</dependency> 
			
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-expression</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
			    <groupId>org.springframework</groupId>
			    <artifactId>spring-jdbc</artifactId>
			    <version>${spring.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-tx</artifactId>
				<version>${spring.version}</version>
			 </dependency>
			 
			 <dependency>
			   <groupId>org.springframework</groupId>
			   <artifactId>spring-orm</artifactId>
			   <version>${spring.version}</version>
			</dependency>
			 
			<dependency>
			    <groupId>org.springframework.security</groupId>
			    <artifactId>spring-security-core</artifactId>      
			    <version>3.0.1.RELEASE</version>
			</dependency>
			<dependency>
			    <groupId>org.springframework.security</groupId>
			    <artifactId>spring-security-openid</artifactId>
			    <version>3.0.1.RELEASE</version>
			</dependency>
			
			<dependency>
			       <groupId>org.springframework.security</groupId>
			       <artifactId>spring-security-config</artifactId>
			       <version>3.0.1.RELEASE</version>
    		</dependency>
    		
    		<dependency>
				   <groupId>org.springframework</groupId>
				   <artifactId>spring-aop</artifactId>
				   <version>${spring.version}</version>
			</dependency>
			
			<dependency>
				    <groupId>org.springframework</groupId>
				    <artifactId>spring-webmvc</artifactId>
				    <version>${spring.version}</version>
			</dependency>
			
			<!-- spring jpa -->
	       <!--  <dependency>
	            <groupId>org.springframework.data</groupId>
	            <artifactId>spring-data-jpa</artifactId>
	            <version>${org.springframework.data.version}</version>
	        </dependency> -->
			
			<dependency>
			    <groupId>org.springframework</groupId>
			    <artifactId>spring-orm</artifactId>
			    <version>${spring.version}</version>
			</dependency>
    		
			<dependency>
		        <groupId>org.springframework</groupId>
		        <artifactId>spring-context-support</artifactId>
		        <version>${spring.version}</version>
    		</dependency>

		<!-- hibernate dependencies -->
			
			<dependency>
	            <groupId>org.hibernate</groupId>
	            <artifactId>hibernate-core</artifactId>
	            <version>${org.hibernate.version}</version>
        </dependency>
  
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-entitymanager</artifactId>
            <version>${org.hibernate.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>cglib</artifactId>
                    <groupId>cglib</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>dom4j</artifactId>
                    <groupId>dom4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>
			
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>${org.hibernate.hibernate-validator.version}</version>
			</dependency>
			
		<dependency>
			<groupId>org.hibernate.javax.persistence</groupId>
			<artifactId>hibernate-jpa-2.1-api</artifactId>
			<version>1.0.0.Final</version>
		</dependency>

	<!-- json dependencies -->
	
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20151123</version>
		</dependency>

		<dependency>
		    <groupId>org.glassfish</groupId>
		    <artifactId>javax.json</artifactId>
		    <version>1.0.4</version>
		</dependency>
		
		<!--  -->
			<dependency>
				<groupId>javassist</groupId>
				<artifactId>javassist</artifactId>
				<version>3.12.1.GA</version>
			</dependency>
			
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>jstl</artifactId>
				<version>1.2</version>
			</dependency>
			
		<!-- AIDR dependencies -->
		<dependency>
			<groupId>qa.qcri.aidr.common</groupId>
			<artifactId>aidr-common</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>qa.qcri.aidr.dbmanager</groupId>
			<artifactId>aidr-db-manager-ejb</artifactId>
			<version>1.0</version>
			<scope>compile</scope>
			<type>ejb-client</type>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>9.4-1206-jdbc41</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.1</version>
		</dependency>
		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.supercsv</groupId>
			<artifactId>super-csv</artifactId>
			<version>2.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.3.1</version>
		</dependency>
		<!-- <dependency> <groupId>org.codehaus.jackson</groupId> <artifactId>jackson-mapper-asl</artifactId> 
			<version>1.7.1</version> </dependency> -->
		<!-- Jackson Dependencies -->
	 	<dependency> <groupId>org.codehaus.jackson</groupId> <artifactId>jackson-mapper-asl</artifactId> 
			<version>1.9.13</version> </dependency> <dependency> <groupId>org.codehaus.jackson</groupId> 
			<artifactId>jackson-core-asl</artifactId> <version>1.9.13</version> 
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jackson</artifactId>
			<version>2.5.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-processing</artifactId>
			<version>2.5.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-moxy</artifactId>
			<version>2.5.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.4.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.4.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.4.2</version>
		</dependency>
		<!-- Jersey -->
		<dependency>
			<groupId>com.fasterxml.jackson.jaxrs</groupId>
			<artifactId>jackson-jaxrs-json-provider</artifactId>
			<version>2.4.2</version>
		</dependency>

		<dependency>
			<groupId>net.minidev</groupId>
			<artifactId>json-smart</artifactId>
			<version>2.0-RC3</version>
		</dependency>

		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>2.4.2</version>
		</dependency>

		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.3.1</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.10</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-web-api</artifactId>
			<version>7.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>2.3</version>
		</dependency>

		<dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache</artifactId>
			<version>2.7.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-pool2</artifactId>
			<version>2.0</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>

		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-client</artifactId>
			<version>2.5.1</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <version>${commons-dbcp.version}</version>
        </dependency>
        
	</dependencies>

	<build>
		<plugins>
			<!-- <plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-war-plugin</artifactId>
			    <configuration>
			        <failOnMissingWebXml>false</failOnMissingWebXml>
			    </configuration>
			</plugin> -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.17</version>
				<configuration>
					<skipTests>true</skipTests>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					<includes>
						<include>**/AllTestSuite.java</include>
					</includes>
					<systemProperties>
						<property>
							<name>PROJECT_HOME</name>
							<value>${project.basedir}</value>
						</property>
						<property>
							<name>nItems</name>
							<value>1000</value>
						</property>
						<property>
							<name>config</name>
							<value>${config}</value>
						</property>
					</systemProperties>
				</configuration>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>${resource.dir}</directory>
				<!-- <includes>
					<include>**/*.properties</include>
				</includes> -->
				<filtering>true</filtering>
			</resource>
		</resources>
		<filters>
			<filter>${basedir}/../profiles/${build.profile.id}/config.properties</filter>
		</filters>
	</build>


	<!-- Profile configuration this should match the one in the master POM -->
	<profiles>
		<profile>
			<id>dev</id>
			<properties>
				<build.profile.id>dev</build.profile.id>
			</properties>
		</profile>
		<profile>
			<id>staging</id>
			<properties>
				<build.profile.id>staging</build.profile.id>
			</properties>
		</profile>
		<profile>
			<id>prod</id>
			<properties>
				<build.profile.id>prod</build.profile.id>
			</properties>
		</profile>
	</profiles>

</project>
